Repair bugs or thingies reported by FindBugs